--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
     "test": "echo 'no tests'"
   },
   "author": "BrunoLM <brunolm7@gmail.com> (http://codingwise.com/)",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/brunolm/btd-ahgora"
+  },
   "license": "MIT",
   "dependencies": {
     "axios": "^0.11.0",
