--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
         "target": "es6",
         "noImplicitAny": false,
         "sourceMap": false,
+        "newLine": "LF",
         "outDir": "built"
     },
     "exclude": [
