--- a/package.json
+++ b/package.json
@@ -12,29 +12,29 @@
     "clean": "gulp clean",
     "test": "mocha built/spec"
   },
+  "types": "dist/index.d.ts",
   "author": "BrunoLM <brunolm7@gmail.com> (http://codingwise.com/)",
   "repository": {
     "type": "git",
     "url": "https://github.com/brunolm/btd-ahgora"
   },
-  "license": "MIT",
+  "license": "ISC",
   "dependencies": {
-    "axios": "^0.11.0",
-    "cheerio": "^0.20.0",
-    "commander": "^2.9.0",
-    "jquery": "^2.2.4",
-    "jsdom": "^9.2.1",
-    "moment": "^2.13.0",
+    "axios": "^0.16.2",
+    "commander": "^2.11.0",
+    "jsdom": "^11.2.0",
+    "moment": "^2.18.1",
     "querystring": "^0.2.0"
   },
   "devDependencies": {
-    "chai": "^3.5.0",
-    "gulp": "^3.9.1",
-    "gulp-shell": "^0.5.2",
-    "mocha": "^2.5.3",
-    "nodemon": "^1.9.2",
-    "rimraf": "^2.5.2",
-    "tslint": "^3.10.1",
-    "typescript": "^1.8.10"
+    "@types/axios": "^0.14.0",
+    "@types/commander": "^2.9.2",
+    "@types/jsdom": "^11.0.1",
+    "@types/moment": "^2.13.0",
+    "@types/node": "^8.0.26",
+    "nodemon": "^1.11.0",
+    "rimraf": "^2.6.1",
+    "tslint": "^5.7.0",
+    "typescript": "^2.4.2"
   }
 }
